--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# setting environment variable "BROWSER" wirh specific value "chrome";
+# setting environment variable "BROWSER" with specific value "chrome";
 
 BROWSER=chrome
